Fixed up css - Text no longer shifts down when selecting a node - Node border color dosent change color when hovered

--- a/app/static/progress_bar/progress_bar.css
+++ b/app/static/progress_bar/progress_bar.css
@@ -1,14 +1,7 @@
-.my-progress-bar-container {
-	width: 100%;
-	overflow: hidden;
-	padding: 0px;
-	margin: 0px;
-}
-
 .my-progress-bar {
 	width: 100%;
 	overflow: hidden;
-	padding: 0px;
+	padding: 5px 0px 0px 0px;
 	margin: 0px;
 	border: 0px;
 }
@@ -41,10 +34,6 @@ li.completed > a.node {
 /* Override Bootstrap classes */
 .nav-tabs > li.active > a.node {
 	border: 2px solid;
-	/* position: relative;
-	top: -10px;
-	width: 50px;
-	height: 50px; */
 	border-color: #7d7d7d;
 }
 
@@ -52,8 +41,17 @@ li.completed > a.node {
 	border-color: #55b776;
 }
 
-.nav-tabs > li > a.node:hover {
+.nav-tabs > li > a.node:hover, .nav-tabs > li.active > a.node {
+	position: relative;
+	top: -5px;
+	width: 50px;
+	height: 50px;
+	margin-bottom: 0;
 	background-color: white;
+}
+
+.nav-tabs > li:not(.completed) > a.node:hover {
+	border-color: #7d7d7d;
 }
 /* End Override Bootstrap classes */
 
